# advent_of_code_2022

./: .gitignore  Cargo.toml  README.md
day_1/: README.md
day_1/src/: lib.rs
day_2/: readme.md
day_2/src/: lib.rs
day_3/: README.md
day_3/src/: lib.rs
src/: main.rs
